--- a/room.html
+++ b/room.html
@@ -153,7 +153,7 @@ MachineDrums.prototype.roleAsAdmin = function() {
     var self = this;
 
     // Set as admin and enable controls
-    $('h1').innerHTML = 'Mobile Machine Drum - Admin';
+    $('p').innerHTML = 'invite your drums:';
 
     // Listen to the STATS update
     self.socket.on('instrument', function(data) {
@@ -280,7 +280,7 @@ MachineDrums.prototype.roleAsInstrument = function() {
     var self = this;
 
     // Set as instrument and disable controls
-    $('h1').innerHTML = 'Mobile Machine Drum - Instrument';
+    $('p').innerHTML = 'select your beat and share:';
 
     // Once select the instrument
     $$('.instrument a').each(function() {
