Adding role class to body [2]

--- a/room.html
+++ b/room.html
@@ -13,7 +13,7 @@
     <meta name="viewport" content="width=320; initial-scale=1.0; maximum-scale=1.0; user-scalable=0;"/>
     
 </head>
-<body class="cli">
+<body>
 
 <h1>Mobile Machine Drum</h1>
 <p>invite your drums:</p>
@@ -131,8 +131,9 @@ var MachineDrums = function() {
             self.socket.emit('join', self.room);
         });
         self.socket.on('role', function(role) {
-            $('body').classList.toggle('adm');
-            $('body').classList.toggle('cli');
+            $('body').classList.remove('adm');
+            $('body').classList.remove('cli');
+            $('body').classList.add(role);
 
             if (role == 'adm') {
                 self.roleAsAdmin();
