Added cornerinha's pattern

--- a/room.html
+++ b/room.html
@@ -216,22 +216,22 @@ MachineDrums.prototype.roleAsAdmin = function() {
                 ]
             },
             'pattern2': {
-                tempo: 180,
+                tempo: 150,
                 pattern: [
-                    [ 'Kick_Reg_1a', 'HH_2_closed_a' ],
+                    [ 'Tom_Hi', 'Ride_Side' ],
                     null,
-                    [ 'HH_2_closed_a' ],
+                    [ 'Stick' ],
                     null,
-                    [ 'Snare_Reg_1a', 'HH_2_closed_a' ],
-                    null,
-                    [  'HH_2_closed_a' ],
-                    null,
-                    [ 'HH_2_closed_a' ],
+                    [ 'Ride_Side', 'Stick' ],
+                    [ 'Tom_Hi' ],
+                    [  'Kick_Reg_1a', 'Tom_Hi' ],
                     null,
                     [ 'Kick_Reg_1a' ],
                     null,
-                    [ 'Snare_Reg_1a'],
-                    [ 'Kick_Reg_1a' ],
+                    [ 'Snare_Reg_1a' ],
+                    null,
+                    [ 'HH_2_closed_a', 'Ride_Side' ],
+                    [ 'Snare_Reg_1a' ],
                     null,
                     null
                 ]
