--- a/room.html
+++ b/room.html
@@ -95,7 +95,7 @@ var MachineDrums = function() {
 
     // Config options
     self.server = {
-        hostname: 'mobiledrums.freegeeks.nl',
+        hostname: '127.0.0.1',
         port    : 8443
     };
     // self.server.hostname = 'mobiledrums.freegeeks.local';
