--- a/room.html
+++ b/room.html
@@ -14,12 +14,12 @@
     
 </head>
 <body>
-
+<header>
 <h1>Mobile Machine Drum</h1>
 <p>invite your drums:</p>
 <em>url: <span>...</span></em>
 <audio src="/snd/coin.wav" controls="controls"></audio> 
-
+</header>
 <ul id="instruments">
     <li class="instrument active a" data-color="#7c0900" data-name="hit-hat" data-sound="HH_2_closed_a"><span></span></li>
     <li class="instrument active b" data-color="#c95624" data-name="kick"    data-sound="Kick_Reg_1a"><span></span></li>
