Implementing proxying. Needed to install nginx 1.3.13+

--- a/room.html
+++ b/room.html
@@ -95,10 +95,11 @@ var MachineDrums = function() {
 
     // Config options
     self.server = {
-        hostname: '192.168.2.5',
-        port    : 8443
+        hostname: 'mobiledrums.freegeeks.nl',
+        port    : 80
     };
     // self.server.hostname = 'mobiledrums.freegeeks.local';
+    // self.server.port = 3000;
 
     self.animationTime = 150; // milliseconds
 
