Changing Analytics subdomain settings

--- a/index.html
+++ b/index.html
@@ -53,6 +53,8 @@ $('.start').on('click', function(e) {
  var _gaq = _gaq || [];
   _gaq.push(['_setAccount', 'UA-41306693-1']);
   _gaq.push(['_trackPageview']);
+  _gaq.push(['_setDomainName', '.mobiledrums.freegeeks.nl']);
+  
 
   (function() {
     var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
