--- a/room.html
+++ b/room.html
@@ -357,7 +357,8 @@ var instance = new MachineDrums();
  var _gaq = _gaq || [];
   _gaq.push(['_setAccount', 'UA-41306693-1']);
   _gaq.push(['_trackPageview']);
-
+  _gaq.push(['_setDomainName', '.mobiledrums.freegeeks.nl']);
+ 
   (function() {
     var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
     ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
